--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -330,6 +330,8 @@
 					</ul>
 					
 				  <ul class="nav navbar-nav navbar-right">
+					<li><button onclick='IrPractipos();' type='button' class='btn btn-success btn-xs' style='margin-top:15px;'><span>Doc. Disponibles:</span><label id='cuantosdisponibles' style=''>0</label>
+					</button></li>
 					<li id='cloudIndex'><a><i class='fa fa-signal' id='signalinternet' style='color:white;'></i></a></li>
 				  </ul>
 				</div>
@@ -345,7 +347,7 @@
 					<div class="col-xs-3 itemsmenu" id="menuNew2" onclick="clickMenu(2);">
 					Historial
 					</div>
-					<div class="col-xs-3 itemsmenu" id="menuNew3" onclick="clickMenu(3);" >
+					<div class="col-xs-2 itemsmenu" id="menuNew3" onclick="clickMenu(3);" >
 					Productos
 					</div>
 					<div class="col-xs-1 itemsmenu"  id="menuNew4" onclick="clickMenu(4);">
@@ -354,7 +356,11 @@
 					<div class="col-xs-1 itemsmenu" id="menuNew5" onclick="clickMenu(5);">
 					<span style='display:inline;' class='fa fa-cog'></span>
 					</div>
-					<div class="col-xs-1 itemsmenu">
+					<div class="col-xs-2 itemsmenu" id="menuNew6" >
+						<button class='btn btn-success btn-xs' onclick="IrPractipos();">
+						<span class='fa fa-file-o'></span>
+						<span id='cuantosdisponibles1'></span>
+						</button>
 					</div>
 				</div>
 				<div class="row">
@@ -696,8 +702,8 @@
 			<div class='modal-content text-center'>
 				<div class="modal-header" style='color:#404041;'>
 				<div class='row'>
-					<div class='col-lg-12' style='padding-top:20px;'>
-					<h1><span class="label label-success" style='border-radius:0px; font-size:48px;'><span class='trans_change'>VUELTO</span>:<span id='vueltoalert'>$ 0.00</span></span></h1>
+					<div class='col-lg-12' style='padding-top:28px; text-align:center;'>
+					<div style='margin-top:10px; text-align:center;'><div style='border-radius:0px; font-size:40px; background-color:#4cae4c; margin-left:auto; margin-right:auto; color:white; max-width:500px;'><span class='trans_change'>VUELTO</span>:&nbsp;<span id='vueltoalert'>$ 0.00</span></div></div>
 					</div>
 				</div>
 				<h1 id='trans_label_88' style='font-size:58px; margin-bottom:20px; margin-top:40px;'>FACTURA GUARDADA CON ÉXITO</h1>
@@ -810,6 +816,10 @@
 			digitado=false;
 			var db = window.openDatabase("Database", "1.0", "PractisisMobile", 200000);
 			db.transaction(iniciaDB,errorCB,successCB);
+			if(localStorage.getItem('docdisponibles')!=null)
+				$('#cuantosdisponibles,#cuantosdisponibles1').html(localStorage.getItem('docdisponibles'));
+			else
+				$('#cuantosdisponibles,#cuantosdisponibles1').html('0');
 			
 			/*if(localStorage.getItem("id_version_nube") == '0'){
 				envia('config');
@@ -1059,14 +1069,14 @@ function IrLocales(){
 
 
 function clickMenu(cual){
-
-document.getElementById("menuNew1").className = "col-xs-3 itemsmenu";
-document.getElementById("menuNew2").className = "col-xs-3 itemsmenu";
-document.getElementById("menuNew3").className = "col-xs-3 itemsmenu";
-document.getElementById("menuNew4").className = "col-xs-1 itemsmenu";
-document.getElementById("menuNew5").className = "col-xs-1 itemsmenu";
-document.getElementById("menuSubNew1").style.display="none";
-document.getElementById("menuSubNew2").style.display="none";
+$("#menuNew1").attr("class","col-xs-3 itemsmenu");
+$("#menuNew2").attr("class","col-xs-3 itemsmenu");
+$("#menuNew3").attr("class","col-xs-3 itemsmenu");
+$("#menuNew4").attr("class","col-xs-1 itemsmenu");
+$("#menuNew5").attr("class","col-xs-1 itemsmenu");
+$("#menuNew6").attr("class","col-xs-2 itemsmenu");
+$("#menuSubNew1").css('display',"none");
+$("#menuSubNew2").css('display',"none");
 
 if (cual==1){
 	envia('puntodeventa');
@@ -1089,7 +1099,7 @@ $("#menuSubNew2").html("Total");
 }
 else if (cual==3){
 VerificarPermiso('productos');
-document.getElementById("menuNew3").className = "col-xs-3 itemsmenuactive";
+document.getElementById("menuNew3").className = "col-xs-2 itemsmenuactive";
 $("#menuSubNew2").html("Total");
 }
 else if (cual==4){
@@ -1127,6 +1137,10 @@ function clickSubMenu(cual){
 			document.getElementById("productos").style.display="none";
 		}
 	}
+}
+
+function IrPractipos(){
+	window.open("https://www.practisis.net/practipos2/");
 }
 
 	</script>
